# fabric-agent-action

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  publish.yaml  update-fabric-patterns.yaml
bats/: test-entrypoint.bats
docs/: security_design.md  updating-fabric-patterns.md
fabric_agent_action/: agents.py  app.py  config.py  constants.py  fabric_tools.py  graphs.py  llms.py
scripts/: download_fabric_patterns.sh  generate_fabric_tools.py
tests/: test_agents.py  test_fabric_tools.py  test_fabric_tools2.py  test_graphs.py  test_llms.py
tests/integration/: helpers.py  test_agent.py  test_agent_react.py  test_agent_router.py
tests/integration/data/: .gitignore  input_react_clean_improve.txt  input_react_issue_clean_improve_step1.txt  input_react_issue_clean_improve_step2.txt  input_react_issue_stride_threat_model_summary_step1.txt  input_react_issue_stride_threat_model_summary_step2.txt  input_react_issue_stride_threat_model_summary_step3.txt  input_react_pr_step1.txt  input_react_pr_step2.txt  input_react_pr_step3.txt  input_react_pr_step4.txt  input_react_stride_threat_model_summary.txt  input_router_clean.txt
