[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabric_agent_action"
version = "0.0.17"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
