[tool.poetry]
name = "fabric-agent-action"
version = "v0.0.26"
description = "A GitHub action that leverages fabric patterns through an agent-based approach"
authors = ["xvnpw <17719543+xvnpw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.48"
langgraph-sdk = "^0.1.36"
langgraph-checkpoint-sqlite = "^2.0.1"
langsmith = "^0.1.143"
langchain-community = "^0.3.7"
langchain-core = "^0.3.18"
langchain-openai = "^0.2.8"
langchain-anthropic = "^0.3.0"
six = "^1.16.0"
pydantic = "^2.9.2"
charset-normalizer = "^3.4.0"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"
bandit = "^1.7.10"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
ignore_missing_imports = true

[tool.black]
line-length = 119
